# xumi

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  token  xumi.py
tests/: test_cigar_ops.py  view_projection.py
tests/data/: cigar_ops.sam  cigar_ops_aligned.tsv  cigar_ops_slice_both.tsv  cigar_ops_slice_left.tsv  cigar_ops_slice_none.tsv  cigar_ops_slice_right.tsv
tests/test_data/: cigar_ops.sam  cigar_ops_aligned.tsv  cigar_ops_slice_both.tsv  cigar_ops_slice_left.tsv  cigar_ops_slice_none.tsv  cigar_ops_slice_right.tsv
