# =========================================================================== #
# Build system
# =========================================================================== #

[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

# =========================================================================== #
# Project metadata
# =========================================================================== #

[project]
name = "xumi"
dynamic = ["version"]
description = "Extract subsequences from read alignments at specified genomic regions, with full CIGAR awareness."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Rafael NAVAZA", email = "rnavaza@pasteur.fr" },
]
keywords = [
    "bioinformatics",
    "genomics",
    "UMI",
    "CIGAR",
    "SAM",
    "BAM",
    "CRAM",
    "sequence-extraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pysam >= 0.20",
]

# =========================================================================== #
# Links shown on PyPI sidebar
# =========================================================================== #

[project.urls]
Homepage   = "https://github.com/fravadona/xumi"
Repository = "https://github.com/fravadona/xumi"
Issues     = "https://github.com/fravadona/xumi/issues"

# =========================================================================== #
# Console script entry point
# =========================================================================== #

[project.scripts]
xumi = "xumi:main"

# =========================================================================== #
# Help Flit to find the source file
# =========================================================================== #

[tool.flit.module]
name = "xumi"

# =========================================================================== #
# pytest
# =========================================================================== #

[tool.pytest.ini_options]
testpaths = ["tests"]
